@startuml

title __DIFF's Class Diagram__\n

  namespace com.cardy.design {
    namespace util {
      namespace diff {
        class com.cardy.design.util.diff.CustomerDIffCallback {
            + areContentsTheSame()
            + areItemsTheSame()
        }
      }
    }
  }
  

  namespace com.cardy.design {
    namespace util {
      namespace diff {
        class com.cardy.design.util.diff.InventoryDiffCallback {
            + areContentsTheSame()
            + areItemsTheSame()
        }
      }
    }
  }
  

  namespace com.cardy.design {
    namespace util {
      namespace diff {
        class com.cardy.design.util.diff.MaterialDiffCallback {
            + areContentsTheSame()
            + areItemsTheSame()
        }
      }
    }
  }
  

  namespace com.cardy.design {
    namespace util {
      namespace diff {
        class com.cardy.design.util.diff.ProductDiffCallback {
            + areContentsTheSame()
            + areItemsTheSame()
        }
      }
    }
  }
  

  namespace com.cardy.design {
    namespace util {
      namespace diff {
        class com.cardy.design.util.diff.PurchaseOrderDiffCallback {
            + areContentsTheSame()
            + areItemsTheSame()
        }
      }
    }
  }
  

  namespace com.cardy.design {
    namespace util {
      namespace diff {
        class com.cardy.design.util.diff.SaleOrderDiffCallback {
            + areContentsTheSame()
            + areItemsTheSame()
        }
      }
    }
  }
  

  namespace com.cardy.design {
    namespace util {
      namespace diff {
        class com.cardy.design.util.diff.SupplierDiffCallback {
            + areContentsTheSame()
            + areItemsTheSame()
        }
      }
    }
  }
  

  namespace com.cardy.design {
    namespace util {
      namespace diff {
        class com.cardy.design.util.diff.UserDiffCallback {
            + areContentsTheSame()
            + areItemsTheSame()
        }
      }
    }
  }
  

  com.cardy.design.util.diff.CustomerDIffCallback -up-|> androidx.recyclerview.widget.DiffUtil.ItemCallback
  com.cardy.design.util.diff.InventoryDiffCallback -up-|> androidx.recyclerview.widget.DiffUtil.ItemCallback
  com.cardy.design.util.diff.MaterialDiffCallback -up-|> androidx.recyclerview.widget.DiffUtil.ItemCallback
  com.cardy.design.util.diff.ProductDiffCallback -up-|> androidx.recyclerview.widget.DiffUtil.ItemCallback
  com.cardy.design.util.diff.PurchaseOrderDiffCallback -up-|> androidx.recyclerview.widget.DiffUtil.ItemCallback
  com.cardy.design.util.diff.SaleOrderDiffCallback -up-|> androidx.recyclerview.widget.DiffUtil.ItemCallback
  com.cardy.design.util.diff.SupplierDiffCallback -up-|> androidx.recyclerview.widget.DiffUtil.ItemCallback
  com.cardy.design.util.diff.UserDiffCallback -up-|> androidx.recyclerview.widget.DiffUtil.ItemCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
